--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </tbody>
     </table>
     <h2 class="top">User Posts</h2>
-    <table class="user-posts">
+    <table id="user-posts">
         <thead>
             <tr>
                 <th>Post ID</th>
