Ya, namanya juga hidup
Banyak yang gua ganti, deal with it

--- a/Backup/index.html
+++ b/Backup/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Intro to AJAX</title>
-    <script type="text/javascript" src="scriptindex.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
