--- a/challenge.html
+++ b/challenge.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Intro to AJAX</title>
-    <script type="text/javascript" src="scriptindex.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -26,21 +26,11 @@
         </tbody>
     </table>
     <h2 class="top">User Posts</h2>
-    <table id="user-posts">
-        <thead>
-            <tr>
-                <th>Post ID</th>
-                <th>Title</th>
-                <th>Content</th>
-                <th>Comments</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td style="text-align: center;" colspan="6">No Posts</td>
-            </tr>
-        </tbody>
-    </table>
+    <div id="user-posts">
+        <div>
+            <p class="card information"><i><b>Press Button "Show Posts" Above (Any User)</b></i></p>
+        </div>
+    </div>
 </body>
 
 </html>
